--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "test": "jasmine"
   },
   "dependencies": {
     "@nuxtjs/markdownit": "^1.1.0",
     "d3": "^4.10.0",
-    "highlight": "^0.2.4",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^1.0.0",
@@ -23,15 +23,8 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-front-matter": "^0.1.2",
-    "mocha": "^3.5.0",
-    "node-sass": "^4.5.3",
     "nuxt": "^1.0.0-rc3",
-    "pug": "^2.0.0-rc.3",
-    "sass": "^1.0.0-beta.2",
-    "sass-loader": "^6.0.6",
     "scrollmagic": "^2.0.5",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "vue": "latest",
     "vuetify": "^0.14.8"
   },
@@ -45,6 +38,13 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "jasmine": "^2.7.0",
+    "node-sass": "^4.5.3",
+    "pug": "^2.0.0-rc.3",
+    "sass": "^1.0.0-beta.2",
+    "sass-loader": "^6.0.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
