--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/markdownit": "^1.1.0",
+    "axios": "^0.16.2",
     "d3": "^4.10.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
