--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "dev-debug": "node --inspect .nuxt/server.js",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -34,13 +35,13 @@
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "latest",
     "eslint-config-standard": "^10.2.1",
+    "ava": "^0.22.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine": "^2.7.0",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.3",
     "sass": "^1.0.0-beta.2",
