--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@nuxtjs/markdownit": "^1.1.0",
+    "@nuxtjs/markdownit-loader": "^1.1.1",
     "axios": "^0.16.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "d3": "^4.10.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
@@ -31,11 +33,11 @@
     "vuetify": "^0.14.8"
   },
   "devDependencies": {
+    "ava": "^0.22.0",
     "babel-eslint": "^7.2.3",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "latest",
     "eslint-config-standard": "^10.2.1",
-    "ava": "^0.22.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
