--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@nuxtjs/markdownit": "^1.1.0",
     "@nuxtjs/markdownit-loader": "^1.1.1",
-    "axios": "^0.16.2",
+    "axios": "^0.17.1",
     "d3": "^4.10.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
@@ -28,27 +28,29 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-front-matter": "^0.1.2",
-    "nuxt": "git+https://github.com/nuxt/nuxt.js.git#dev",
+    "nuxt": "1.0.0-rc11",
     "scrollmagic": "^2.0.5",
-    "vue": "^2.5.2",
-    "vuetify": "^0.16.7"
+    "vue": "^2.5.4",
+    "vue-server-renderer": "^2.5.4",
+    "vue-template-compiler": "^2.5.4",
+    "vuetify": "^0.17.1"
   },
   "devDependencies": {
-    "ava": "^0.22.0",
-    "babel-eslint": "^7.2.3",
+    "ava": "^0.23.0",
+    "babel-eslint": "^8.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "eslint": "^4.3.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "latest",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.6.1",
     "pug": "^2.0.0-rc.3",
-    "sass": "^1.0.0-beta.2",
+    "sass": "^1.0.0-beta.3",
     "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
