--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/markdownit": "^1.1.0",
+    "@nuxtjs/markdownit": "^1.2.0",
     "@nuxtjs/markdownit-loader": "^1.1.1",
     "axios": "^0.17.1",
-    "d3": "^4.10.0",
+    "d3": "^4.12.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^1.0.0",
@@ -30,16 +30,17 @@
     "markdown-it-front-matter": "^0.1.2",
     "nuxt": "1.0.0-rc11",
     "scrollmagic": "^2.0.5",
-    "vue": "^2.5.4",
-    "vue-server-renderer": "^2.5.4",
-    "vue-template-compiler": "^2.5.4",
-    "vuetify": "^0.17.1"
+    "vue": "^2.5.9",
+    "vue-server-renderer": "^2.5.9",
+    "vue-template-compiler": "^2.5.9",
+    "vue2-leaflet": "0.0.57",
+    "vuetify": "^0.17.3"
   },
   "devDependencies": {
     "ava": "^0.23.0",
     "babel-eslint": "^8.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "eslint": "^4.11.0",
+    "eslint": "^4.12.0",
     "eslint-config-airbnb-base": "latest",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -48,7 +49,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.6.1",
+    "node-sass": "^4.7.2",
     "pug": "^2.0.0-rc.3",
     "sass": "^1.0.0-beta.3",
     "sass-loader": "^6.0.6",
