--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "ava": "^0.23.0",
     "babel-eslint": "^8.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "eslint": "^4.12.0",
-    "eslint-config-airbnb-base": "latest",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
