--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/markdownit-loader": "^1.1.1",
     "axios": "^0.17.1",
     "d3": "^4.12.0",
+    "d3-svg-legend": "^2.25.0",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
@@ -31,6 +32,7 @@
     "markdown-it-front-matter": "^0.1.2",
     "nuxt": "1.0.0-rc11",
     "scrollmagic": "^2.0.5",
+    "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.9",
     "vue-server-renderer": "^2.5.9",
     "vue-template-compiler": "^2.5.9",
