Working version without map with new data

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,10 @@
-{"public": "dist"}
+{
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
