--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "gendeploy": "nuxt generate && firebase deploy",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
@@ -21,6 +22,7 @@
     "@nuxtjs/markdownit-loader": "^1.1.1",
     "axios": "^0.17.1",
     "d3": "^4.12.0",
+    "d3-scale-chromatic": "^1.1.1",
     "d3-svg-legend": "^2.25.1",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
