--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^4.12.0",
     "d3-scale-chromatic": "^1.1.1",
     "d3-svg-legend": "^2.25.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
@@ -40,12 +41,13 @@
     "vue-template-compiler": "^2.5.9",
     "vue2-animate": "^1.0.4",
     "vue2-leaflet": "0.0.57",
-    "vuetify": "^0.17.3"
+    "vuetify": "^0.17.4"
   },
   "devDependencies": {
     "ava": "^0.23.0",
     "babel-eslint": "^8.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-2017": "0.0.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
