--- a/package.json
+++ b/package.json
@@ -20,11 +20,23 @@
   "dependencies": {
     "@nuxtjs/markdownit": "^1.2.0",
     "@nuxtjs/markdownit-loader": "^1.1.1",
+    "@types/d3": "^4.12.0",
     "axios": "^0.17.1",
     "d3": "^4.12.0",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-format": "^1.2.1",
+    "d3-request": "^1.0.6",
+    "d3-scale": "^1.0.7",
     "d3-scale-chromatic": "^1.1.1",
-    "d3-svg-legend": "^2.25.1",
-    "eslint-plugin-vue": "^4.0.0-beta.2",
+    "d3-selection": "^1.2.0",
+    "d3-selection-multi": "^1.0.1",
+    "d3-svg-annotation": "^2.1.0",
+    "d3-svg-legend": "^2.25.3",
+    "d3-zoom": "^1.7.1",
+    "d3kit": "^3.2.0",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
@@ -35,7 +47,7 @@
     "markdown-it-front-matter": "^0.1.2",
     "nuxt": "1.0.0-rc11",
     "scrollmagic": "^2.0.5",
-    "vee-validate": "^2.0.0-rc.25",
+    "vee-validate": "^2.0.0-rc.26",
     "vue": "^2.5.9",
     "vue-server-renderer": "^2.5.9",
     "vue-template-compiler": "^2.5.9",
@@ -45,10 +57,13 @@
   },
   "devDependencies": {
     "ava": "^0.23.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-2017": "0.0.0",
-    "eslint": "^4.12.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2017": "^6.24.1",
+    "eslint": "^4.13.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -57,9 +72,10 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "node-sass": "^4.7.2",
     "pug": "^2.0.0-rc.3",
-    "sass": "^1.0.0-beta.3",
+    "sass": "^1.0.0-beta.4",
     "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
