update config and package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "gendeploy": "nuxt generate && firebase deploy",
+    "gen-fire": "nuxt generate && firebase deploy",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
@@ -38,6 +38,7 @@
     "d3-zoom": "^1.7.1",
     "d3kit": "^3.2.0",
     "leaflet": "^1.2.0",
+    "load-google-maps-api": "^1.0.1",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^1.0.0",
@@ -45,22 +46,21 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-front-matter": "^0.1.2",
-    "nuxt": "1.0.0-rc11",
+    "nuxt": "^1.0.0-gh-126b58b",
     "scrollmagic": "^2.0.5",
-    "vee-validate": "^2.0.0-rc.26",
-    "vue": "^2.5.10",
-    "vue-server-renderer": "^2.5.10",
-    "vue-template-compiler": "^2.5.10",
+    "vee-validate": "^2.0.0-rc.27",
+    "vue": "^2.5.11",
+    "vue-server-renderer": "^2.5.11",
+    "vue-template-compiler": "^2.5.11",
     "vue2-animate": "^1.0.4",
     "vue2-leaflet": "0.0.57",
-    "vuetify": "^0.17.4"
+    "vuetify": "^1.0.0-alpha.3"
   },
   "devDependencies": {
     "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-2017": "0.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "eslint": "^4.13.1",
