--- a/package.json
+++ b/package.json
@@ -32,13 +32,11 @@
     "d3-scale": "^1.0.7",
     "d3-scale-chromatic": "^1.1.1",
     "d3-selection": "^1.2.0",
-    "d3-selection-multi": "^1.0.1",
     "d3-svg-annotation": "^2.1.0",
     "d3-svg-legend": "^2.25.3",
     "d3-zoom": "^1.7.1",
     "d3kit": "^3.2.0",
     "leaflet": "^1.2.0",
-    "load-google-maps-api": "^1.0.1",
     "lodash": "^4.17.4",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^1.0.0",
@@ -49,10 +47,11 @@
     "nuxt": "^1.0.0-gh-126b58b",
     "scrollmagic": "^2.0.5",
     "vee-validate": "^2.0.0-rc.27",
-    "vue": "^2.5.11",
-    "vue-server-renderer": "^2.5.11",
-    "vue-template-compiler": "^2.5.11",
+    "vue": "^2.5.10",
+    "vue-server-renderer": "^2.5.10",
+    "vue-template-compiler": "^2.5.10",
     "vue2-animate": "^1.0.4",
+    "vue2-google-maps": "^0.8.4",
     "vue2-leaflet": "0.0.57",
     "vuetify": "^1.0.0-alpha.3"
   },
@@ -60,7 +59,6 @@
     "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "eslint": "^4.13.1",
