--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nuxtjs/markdownit-loader": "^1.1.1",
     "@types/d3": "^4.12.0",
     "axios": "^0.17.1",
+    "babel-preset-es2015": "^6.24.1",
+    "caniuse-lite": "^1.0.30000783",
     "d3": "^4.12.0",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
@@ -38,6 +40,7 @@
     "d3kit": "^3.2.0",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
+    "markdown-it": "^8.4.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-attrs": "^1.0.0",
     "markdown-it-container": "^2.0.0",
@@ -45,19 +48,20 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-front-matter": "^0.1.2",
     "nuxt": "^1.0.0-gh-126b58b",
+    "pug-loader": "^2.3.0",
     "scrollmagic": "^2.0.5",
     "vee-validate": "^2.0.0-rc.27",
-    "vue": "^2.5.10",
-    "vue-server-renderer": "^2.5.10",
-    "vue-template-compiler": "^2.5.10",
+    "vue": "^2.5.11",
+    "vue-server-renderer": "^2.5.11",
+    "vue-template-compiler": "^2.5.11",
     "vue2-animate": "^1.0.4",
     "vue2-google-maps": "^0.8.4",
     "vue2-leaflet": "0.0.57",
-    "vuetify": "^1.0.0-alpha.3"
+    "vuetify": "^0.17.5"
   },
   "devDependencies": {
-    "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
