--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "d3-svg-legend": "^2.25.3",
     "d3-zoom": "^1.7.1",
     "d3kit": "^3.2.0",
+    "exact": "^0.8.0",
     "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
@@ -51,13 +52,14 @@
     "pug-loader": "^2.3.0",
     "scrollmagic": "^2.0.5",
     "vee-validate": "^2.0.0-rc.27",
-    "vue": "^2.5.11",
-    "vue-server-renderer": "^2.5.11",
-    "vue-template-compiler": "^2.5.11",
+    "vue": "^2.5.10",
+    "vue-server-renderer": "^2.5.10",
+    "vue-template-compiler": "^2.5.10",
     "vue2-animate": "^1.0.4",
     "vue2-google-maps": "^0.8.4",
     "vue2-leaflet": "0.0.57",
-    "vuetify": "^0.17.5"
+    "vuetify": "^0.17.5",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
