--- a/package.json
+++ b/package.json
@@ -1,87 +1,76 @@
 {
-  "name": "citee-website",
-  "version": "1.0.0",
-  "description": "Source files of CITee project website",
-  "author": "Asif Mehedi <asif.mehedi@live.com>",
-  "private": true,
-  "quokka": {
-    "babel": true
-  },
-  "scripts": {
-    "dev": "nuxt",
-    "dev-debug": "node --inspect .nuxt/server.js",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "gen-fire": "nuxt generate && firebase deploy",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
-  },
-  "dependencies": {
-    "@nuxtjs/markdownit": "^1.2.0",
-    "@nuxtjs/markdownit-loader": "^1.1.1",
-    "@types/d3": "^4.12.0",
-    "axios": "^0.17.1",
-    "babel-preset-es2015": "^6.24.1",
-    "caniuse-lite": "^1.0.30000783",
-    "d3": "^4.12.0",
-    "d3-array": "^1.2.1",
-    "d3-axis": "^1.0.8",
-    "d3-brush": "^1.0.4",
-    "d3-color": "^1.0.3",
-    "d3-format": "^1.2.1",
-    "d3-request": "^1.0.6",
-    "d3-scale": "^1.0.7",
-    "d3-scale-chromatic": "^1.1.1",
-    "d3-selection": "^1.2.0",
-    "d3-svg-annotation": "^2.1.0",
-    "d3-svg-legend": "^2.25.3",
-    "d3-zoom": "^1.7.1",
-    "d3kit": "^3.2.0",
-    "exact": "^0.8.0",
-    "leaflet": "^1.2.0",
-    "lodash": "^4.17.4",
-    "markdown-it": "^8.4.0",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-attrs": "^1.0.0",
-    "markdown-it-container": "^2.0.0",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-front-matter": "^0.1.2",
-    "nuxt": "^1.0.0-gh-126b58b",
-    "pug-loader": "^2.3.0",
-    "scrollmagic": "^2.0.5",
-    "vee-validate": "^2.0.0-rc.27",
-    "vue": "^2.5.10",
-    "vue-server-renderer": "^2.5.10",
-    "vue-template-compiler": "^2.5.10",
-    "vue2-animate": "^1.0.4",
-    "vue2-google-maps": "^0.8.4",
-    "vue2-leaflet": "0.0.57",
-    "vuetify": "^0.17.5",
-    "webpack": "^3.10.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2017": "^6.24.1",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0-beta.2",
-    "node-sass": "^4.7.2",
-    "pug": "^2.0.0-rc.3",
-    "sass": "^1.0.0-beta.4",
-    "sass-loader": "^6.0.6",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
-  }
+    "name": "citee-website",
+    "version": "1.0.0",
+    "description": "Source files of CITee project website",
+    "author": "Asif Mehedi <asif.mehedi@live.com>",
+    "private": true,
+    "quokka": {
+        "babel": true
+    },
+    "scripts": {
+        "dev": "nuxt",
+        "dev-debug": "node --inspect .nuxt/server.js",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "gen-fire": "nuxt generate && firebase deploy",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+        "precommit": "npm run lint"
+    },
+    "dependencies": {
+        "axios": "^0.17.1",
+        "d3": "^4.12.2",
+        "d3-array": "^1.2.1",
+        "d3-axis": "^1.0.8",
+        "d3-brush": "^1.0.4",
+        "d3-color": "^1.0.3",
+        "d3-format": "^1.2.2",
+        "d3-request": "^1.0.6",
+        "d3-scale": "^1.0.7",
+        "d3-scale-chromatic": "^1.1.1",
+        "d3-selection": "^1.2.0",
+        "d3-svg-annotation": "^2.1.0",
+        "d3-svg-legend": "^2.25.4",
+        "d3-zoom": "^1.7.1",
+        "d3kit": "^3.2.0",
+        "file-saver": "^1.3.3",
+        "leaflet": "^1.3.1",
+        "lodash": "^4.17.4",
+        "markdown-it": "^8.4.0",
+        "markdown-it-abbr": "^1.0.4",
+        "markdown-it-attrs": "^1.2.1",
+        "markdown-it-container": "^2.0.0",
+        "markdown-it-deflist": "^2.0.3",
+        "markdown-it-footnote": "^3.0.1",
+        "markdown-it-front-matter": "^0.1.2",
+        "nuxt": "^1.1.1",
+        "scrollmagic": "^2.0.5",
+        "vee-validate": "^2.0.3",
+        "vue2-animate": "^1.0.4",
+        "vue2-google-maps": "^0.8.4",
+        "vue2-leaflet": "0.0.57",
+        "vuetify": "^1.0.0-beta.4"
+    },
+    "devDependencies": {
+        "@nuxtjs/markdownit": "^1.2.0",
+        "@nuxtjs/markdownit-loader": "^1.1.1",
+        "@types/d3": "^4.12.0",
+        "babel-eslint": "^8.2.1",
+        "eslint": "^4.16.0",
+        "eslint-config-airbnb-base": "^12.1.0",
+        "eslint-friendly-formatter": "^3.0.0",
+        "eslint-loader": "^1.9.0",
+        "eslint-plugin-html": "^3.1.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-node": "^5.2.1",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-vue": "^4.2.0",
+        "node-sass": "^4.7.2",
+        "pug": "^2.0.0-rc.3",
+        "pug-loader": "^2.3.0",
+        "sass": "^1.0.0-beta.4",
+        "sass-loader": "^6.0.6",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.1"
+    }
 }
