--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "axios": "^0.17.1",
+        "cypress": "^1.4.1",
         "d3": "^4.13.0",
         "d3-array": "^1.2.1",
         "d3-axis": "^1.0.8",
@@ -43,10 +44,10 @@
         "markdown-it-deflist": "^2.0.3",
         "markdown-it-footnote": "^3.0.1",
         "markdown-it-front-matter": "^0.1.2",
-        "nuxt": "^1.2.1",
+        "nuxt": "^1.3.0",
         "scrollmagic": "^2.0.5",
         "vee-validate": "^2.0.3",
-        "vue": "latest",
+        "vue": "^2.5.13",
         "vue-axios": "^2.0.2",
         "vue2-animate": "^1.0.4",
         "vue2-google-maps": "^0.8.4",
@@ -62,6 +63,7 @@
         "eslint-config-airbnb-base": "^12.1.0",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.9.0",
+        "eslint-plugin-cypress": "^2.0.1",
         "eslint-plugin-html": "^3.1.1",
         "eslint-plugin-import": "^2.8.0",
         "eslint-plugin-node": "^5.2.1",
