--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017"
+    "target": "esnext"
     // "noLib": true
   },
   "exclude": ["node_modules", "dist"]
