--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
     "author": "Asif Mehedi <asif.mehedi@live.com>",
     "private": true,
     "quokka": {
-        "babel": true
+        "babel": true,
+        "plugins": [
+            "alias-quokka-plugin"
+        ],
+        "alias": {
+            "~": "."
+        }
     },
     "scripts": {
         "dev": "nuxt",
@@ -14,13 +20,12 @@
         "start": "nuxt start",
         "generate": "nuxt generate",
         "gen-fire": "nuxt generate && firebase deploy",
-        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
         "precommit": "npm run lint"
     },
     "dependencies": {
         "axios": "^0.17.1",
         "cypress": "^1.4.2",
-        "d3": "^4.13.0",
+        "d3": "^5.0.0-rc.3",
         "d3-array": "^1.2.1",
         "d3-axis": "^1.0.8",
         "d3-brush": "^1.0.4",
@@ -30,14 +35,17 @@
         "d3-scale": "^1.0.7",
         "d3-scale-chromatic": "^1.2.0",
         "d3-selection": "^1.3.0",
-        "d3-svg-annotation": "^2.1.0",
-        "d3-svg-legend": "^2.25.4",
+        "d3-svg-annotation": "^2.2.0",
+        "d3-svg-legend": "^2.25.5",
         "d3-zoom": "^1.7.1",
         "d3kit": "^3.2.0",
+        "eslint-import-resolver-webpack": "^0.8.4",
         "file-saver": "^1.3.3",
+        "isomorphic-fetch": "^2.2.1",
+        "jstransformer-markdown-it": "^2.0.0",
         "leaflet": "^1.3.1",
         "lodash": "^4.17.5",
-        "markdown-it": "^8.4.0",
+        "markdown-it": "^8.4.1",
         "markdown-it-abbr": "^1.0.4",
         "markdown-it-attrs": "^1.2.1",
         "markdown-it-container": "^2.0.0",
@@ -46,20 +54,21 @@
         "markdown-it-front-matter": "^0.1.2",
         "nuxt": "^1.3.0",
         "scrollmagic": "^2.0.5",
-        "vee-validate": "^2.0.3",
+        "vee-validate": "^2.0.4",
         "vue": "^2.5.13",
         "vue-axios": "^2.0.2",
         "vue2-animate": "^1.0.4",
-        "vue2-google-maps": "^0.8.4",
+        "vue2-google-maps": "^0.8.6",
         "vue2-leaflet": "0.0.57",
-        "vuetify": "^1.0.0-beta.5"
+        "vuetify": "^1.0.1"
     },
     "devDependencies": {
         "@nuxtjs/markdownit": "^1.2.0",
         "@nuxtjs/markdownit-loader": "^1.1.1",
-        "@types/d3": "^4.12.0",
+        "@types/d3": "^4.13.0",
+        "alias-quokka-plugin": "^0.1.0",
         "babel-eslint": "^8.2.1",
-        "eslint": "^4.17.0",
+        "eslint": "^4.18.0",
         "eslint-config-airbnb-base": "^12.1.0",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.9.0",
